Show layer data in sidepanel if the source is html

--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -192,6 +192,18 @@
 	</div>
 </script>
 
+<script type='text/html' id='tab-panel-template'>
+    <div class="search-results-wrapper">
+        <div class="search-result-sub-title search-results-total"
+             data-search-result-id="">
+            <%= titleName %>
+        </div>
+        <div class="col-12 right-panel-chart">
+            <%= content %>
+        </div>
+    </div>
+</script>
+
 <script type='text/html' id='climate-data-template'>
     <div id="temperature-chart-wrapper" class="search-results-wrapper">
         <div class="search-result-sub-title search-results-total"
