--- a/bims/templates/non_validated_user_list.html
+++ b/bims/templates/non_validated_user_list.html
@@ -18,46 +18,82 @@
 {% block body_content %}
 <div style="min-height: 100%; height: auto;">
     <div id="message-success" style="display: none; float: left; width: 100%; height: 50px"></div>
+
     <div class="container header-wrapper">
         Update Biodiversity Record
         <hr/>
     </div>
     <div class="container" style="margin-bottom: 15px">
+        <div class="form-group">
         <div class="filter"> <span>Filter by</span>
-            <select id="filter-select" onchange="dynamicInputFilter(this)">
-                <option value=""></option>
-                <option value="original_species_name">original species name</option>
-                <option value="collection_date">collection date</option>
-            </select>
-            <input type="text" class="input-options original_species_name" name="original_species_name" style="display: none">
-            <input type="date" class="input-options collection_date" name="date_from" style="display: none"><span class="input-options collection_date" style="display: none"> to </span><input type="date" class="input-options collection_date" name="date_to" style="display: none">
-            <input type="text" class="input-options owner" name="owner" style="display: none">
-            <span><input type="button" name="filter_result" value="Go"></span>
-        </div>
+            <div class="row">
+                <div class="col-5">
+                    <select id="filter-select"
+                            onchange="dynamicInputFilter(this)"
+                            class="form-control">
+                        <option value=""></option>
+                        <option value="original_species_name">
+                            Original species name
+                        </option>
+                        <option value="collection_date">
+                            Collection date
+                        </option>
+                    </select>
+                </div>
+                <div class="col-5" style="display: none">
+                    <input type="text"
+                           class="input-options original_species_name form-control"
+                           name="original_species_name" style="display: none">
+                    <input type="date"
+                           class="input-options collection_date"
+                           name="date_from" style="display: none"><span
+                        class="input-options collection_date"
+                        style="display: none"> to </span><input type="date"
+                                                                class="input-options collection_date"
+                                                                name="date_to"
+                                                                style="display: none">
+                </div>
+                <div class="col-2">
+                    <input class="btn btn-default" type="button" name="filter_result" value="Go" style="float: left; width: 50px;">
+                </div>
+            </div>
+        </div></div>
     </div>
     <div class="container">
     <div class="row">
-    <div class="col-lg-7">
+    <div class="col-lg-12">
+        <div id="map" class="map"></div>
+    </div>
+    </div>
+    <div class="row">
+    <div class="col-lg-12">
     <table class="table table-striped">
         <tr>
+            <th>FBIS Site Code</th>
             <th>Original Species Name</th>
             <th>Category</th>
             <th>Collection Date</th>
-            <th>Owner</th>
+            <th>Collector</th>
             <th>Action</th>
             <th style="text-align: center !important;">Ready to be Validated</th>
         </tr>
         {% for obj in biorecords %}
             <tr>
+                <td><a onclick="zoomToObject({{ obj.site.geometry_point.x }}, {{ obj.site.geometry_point.y }})" class="site-link" data-toggle="tooltip" title="Show data in the map">
+                    {% if obj.site.site_code %}{{ obj.site.site_code }}{% else %}-{% endif %}
+                </a></td>
                 {% if obj.site.geometry_point %}
-                    <td><a onclick="zoomToObject({{ obj.site.geometry_point.x }}, {{ obj.site.geometry_point.y }}, {{ obj.pk }})" class="site-link">{{ obj.original_species_name }}</a></td>
+                    <td><a onclick="showDetail({{ obj.pk }})" class="site-link">{{ obj.original_species_name }}</a></td>
                 {% else %}
                     <td><a>{{ obj.original_species_name }}</a></td>
                 {% endif %}
                 <td>{% if obj.category == 'indigenous' %}Native{% elif obj.category == 'alien' %}Non-Native{% else %}-{% endif %}</td>
                 <td>{{ obj.collection_date }}</td>
-                <td>{{ obj.owner }}</td>
-                <td class="edit-action"><a href="{% url 'update-records' obj.pk %}" class="btn btn-default" data-toggle="tooltip" title="Edit this object"><i class="fa fa-pencil"></i></a></td>
+                <td>{{ obj.collector_user.get_full_name }}</td>
+                <td class="edit-action">
+                    <a href="{% url 'update-records' obj.pk %}" class="btn btn-default edit-data" data-toggle="tooltip" title="Edit this object"><i class="fa fa-pencil"></i></a>
+                    <a href="#" onclick="deleteObject({{ obj.pk }})" class="btn btn-default" data-toggle="tooltip" title="Delete this object"><i class="fa fa-trash"></i></a>
+                </td>
                 <td class="ready-validate-action" style="text-align: center !important;">
                     {% if not obj.ready_for_validation %}
                         <a onclick="sendEmailValidation({{ obj.pk }})" title="Send email notification to validator to review this object"><i class="fa fa-send"></i></a>
@@ -69,10 +105,48 @@
         {% endfor %}
     </table>
     </div>
-    <div class="col-lg-5">
-        <div id="map" class="map" style="height: 100%"></div>
-    </div>
     <div id="popup"></div>
+
+    <div class="modal fade" tabindex="-1" role="dialog" id="confirmDeleteModal" data-id="">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Delete Data</h5>
+                    <button type="button" class="close" data-dismiss="modal"
+                            aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure you want to delete this data?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" id="deleteBtn">
+                        Delete
+                    </button>
+                    <button type="button" class="btn btn-secondary"
+                            data-dismiss="modal">Close
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+     <div class="modal fade" tabindex="-1" role="dialog" id="detailModal" data-id="">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Detail Collection</h5>
+                    <button type="button" class="close" data-dismiss="modal"
+                            aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
     </div>
     {% if is_paginated %}
@@ -106,6 +180,8 @@
     <script src="{% static 'js/libs/datepicker/i18n/datepicker.en.js' %}"></script>
     <script>
         var validateUrl = '{% url "validate-object" %}';
+        let deleteDataUrl = '{% url "collection-delete" col_id=0 %}';
+        let currentUrl = '{% url "nonvalidated-user-list" %}';
         var customUrl = '{{ custom_url }}';
         var pageUrl = '/nonvalidated-user-list/';
     </script>
