Update grunt server

--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -150,6 +150,8 @@
     <script src="{% static "js/libs/canvas2svg.js" %}"></script>
     <script src="{% static "js/utils/svg_download.js" %}"></script>
 
-    {% grunt_module "map_view" %}
+    <script src="{% static "js/optimized.js" %}"></script>
+
+{#    {% grunt_module "map_view" %}#}
 
 {% endblock %}
