--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -150,8 +150,6 @@
     <script src="{% static "js/libs/canvas2svg.js" %}"></script>
     <script src="{% static "js/utils/svg_download.js" %}"></script>
 
-    <script src="{% static "js/optimized.js" %}"></script>
-
-{#    {% grunt_module "map_view" %}#}
+    {% grunt_module "map_view" %}
 
 {% endblock %}
