Fix import species

--- a/bims/templates/collections_form_page.html
+++ b/bims/templates/collections_form_page.html
@@ -1,7 +1,7 @@
 {% extends 'main_base.html' %}
 {% load static from staticfiles %}
 {% block subtitle %}
-    Fish Form
+    {{ taxon_group_name }} Form
 {% endblock %}
 
 {% block head %}
