Fix chart download for browser with different zoom level

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -542,7 +542,7 @@
                         </div>
                         <button class="ssdd-export btn btn-default pull-right"
                                 data-toggle="tooltip" data-placement="left"
-                                title="Download chart as svg which you can drag and drop to excel or word"
+                                title="Download chart as svg which you can insert the svg to excel or word"
                                 data-datac="species-ssdd-occurrences-line-chart-canvas"
                                 data-title="Occurrences" data-chart="occurrences_line">
                             <i class="fa fa-download"></i>
@@ -563,8 +563,8 @@
                         </div>
                         <button class="ssdd-export btn btn-default pull-right"
                                 data-toggle="tooltip" data-placement="left"
-                                title="Download chart as svg which you can drag and drop to excel or word"
-                                data-datac="species-ssdd-taxa-occurrences-line-chart-canvas" data-chart="occurrences_line" data-title="Taxa Occurrences">
+                                title="Download chart as svg which you can insert the svg to excel or word"
+                                data-datac="species-ssdd-taxa-occurrences-line-chart-canvas" data-chart="taxa_stacked_bar" data-title="Taxa Occurrences">
                             <i class="fa fa-download"></i>
                         </button>
                     </div>
@@ -584,7 +584,7 @@
                         </div>
                         <button class="ssdd-export btn btn-default pull-right"
                                 data-toggle="tooltip" data-placement="left"
-                                title="Download chart as svg which you can drag and drop to excel or word"
+                                title="Download chart as svg which you can insert the svg to excel or word"
                                 data-datac="species-ssdd-origin-bar-chart-canvas" data-chart="origin_bar" data-title="Origin">
                             <i class="fa fa-download"></i>
                         </button>
@@ -605,7 +605,7 @@
                         </div>
                         <button class="ssdd-export btn btn-default pull-right"
                                 data-toggle="tooltip" data-placement="left"
-                                title="Download chart as svg which you can drag and drop to excel or word"
+                                title="Download chart as svg which you can insert the svg to excel or word"
                                 data-datac="species-ssdd-endemism-bar-chart" data-chart="endemism" data-title="Endemism">
                             <i class="fa fa-download"></i>
                         </button>
@@ -626,7 +626,7 @@
                         </div>
                         <button class="ssdd-export btn btn-default pull-right"
                                 data-toggle="tooltip" data-placement="left"
-                                title="Download chart as svg which you can drag and drop to excel or word"
+                                title="Download chart as svg which you can insert the svg to excel or word"
                                 data-datac="species-ssdd-cons-status-bar-chart-canvas" data-title="Conservation status" data-chart="cons_status_bar">
                             <i class="fa fa-download"></i>
                         </button>
