--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -349,7 +349,7 @@
                             <i data-download-title="Proportion of sensitive to tolerant taxa"
                                data-download-chart="proportion-of-sensitive"
                                data-toggle="tooltip" data-placement="left"
-                               title="Download chart as svg which you can drag and drop to excel or word"
+                               title="Download chart as svg which you can insert the svg to excel or word"
                                class="fa fa-download pull-right download-icon download-chart-new"></i>
                         </div>
                         <canvas id="sensitivity-chart"></canvas>
@@ -364,7 +364,7 @@
                             <i data-download-title="Biotope ratings"
                                data-download-chart="biotope-ratings"
                                data-toggle="tooltip" data-placement="left"
-                               title="Download chart as svg which you can drag and drop to excel or word"
+                               title="Download chart as svg which you can insert the svg to excel or word"
                                class="fa fa-download pull-right download-icon download-chart-new"></i>
                         </div>
                         <canvas id="biotope-ratings-chart"></canvas>
@@ -375,7 +375,7 @@
                             <i data-download-title="Ecological category"
                                data-download-chart="ecological-category"
                                data-toggle="tooltip" data-placement="left"
-                               title="Download chart as svg which you can drag and drop to excel or word"
+                               title="Download chart as svg which you can insert the svg to excel or word"
                                class="fa fa-download pull-right download-icon download-chart-new"></i>
                         </div>
                         <div class="ecological-chart-header">-</div>
@@ -391,7 +391,7 @@
                             <i data-download-title="Abiotic Data"
                                data-download-chart="chem-graph"
                                data-toggle="tooltip" data-placement="left"
-                               title="Download chart as svg which you can drag and drop to excel or word"
+                               title="Download chart as svg which you can insert the svg to excel or word"
                                class="fa fa-download pull-right download-icon download-chart-new"></i>
                         </div>
                         <div class="col-12 species-ssdd-chem-bar-chart" id="chem-bar-chart-wrapper">
