Update category to origin

--- a/bims/templates/non_validated_list.html
+++ b/bims/templates/non_validated_list.html
@@ -74,7 +74,7 @@
         <tr>
             <th>FBIS Site Code</th>
             <th>Original Species Name</th>
-            <th>Category</th>
+            <th>Origin</th>
             <th>Collection Date</th>
             <th>Owner</th>
             <th>Validation Action</th>
