--- a/bims/templates/non_validated_user_list.html
+++ b/bims/templates/non_validated_user_list.html
@@ -71,7 +71,7 @@
         <tr>
             <th>FBIS Site Code</th>
             <th>Original Species Name</th>
-            <th>Category</th>
+            <th>Origin</th>
             <th>Collection Date</th>
             <th>Collector</th>
             <th>Action</th>
